Pagination Style Issue on Mobile Device - Improved (#2226)

--- a/assets/css/public-main.css
+++ b/assets/css/public-main.css
@@ -14353,6 +14353,9 @@ input.directorist-toggle-input:checked + .directorist-toggle-input-label span.di
       -ms-flex-pack: center;
           justify-content: center;
   gap: 8px;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
 }
 .directorist-pagination .page-numbers {
   display: -webkit-inline-box;
